--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=production node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.12"
   }
