--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "github-username-regex": "^1.0.0",
     "node-cache": "^5.1.2"
   },
   "devDependencies": {
