--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^18.10.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "fastify": "^3.22.0",
+    "fastify-compression": "^1.3.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-plugin": "^3.0.0",
+    "fastify-schedule": "^1.0.0",
     "github-username-regex": "^1.0.0",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "toad-scheduler": "^1.5.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
