--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@octokit/rest": "^18.10.0",
     "fastify": "^3.22.0",
-    "fastify-compression": "^1.3.0",
+    "fastify-compress": "^3.6.1",
     "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
     "fastify-schedule": "^1.0.0",
