--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^18.10.0",
+    "discord-webhook-node": "^1.1.8",
     "fastify": "^3.22.0",
     "fastify-autoload": "^3.9.0",
     "fastify-compress": "^3.6.1",
@@ -23,6 +24,7 @@
     "fastify-schedule": "^1.0.0",
     "fastify-swagger": "^4.12.4",
     "github-username-regex": "^1.0.0",
+    "moment": "^2.29.1",
     "node-cache": "^5.1.2",
     "toad-scheduler": "^1.5.0"
   },
