--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 GITHUB_TOKEN_API=ghp_XXXXXX
 DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/XXXXXXX/XXXXXXXXX
+MENTION_DISCORD_USER_ID=XXXXXXXXXX
