--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fontsource/poppins": "^4.5.0",
     "@octokit/rest": "^18.10.0",
+    "badge-maker": "^3.3.1",
+    "canvas": "^2.8.0",
     "discord-webhook-node": "^1.1.8",
     "fastify": "^3.22.0",
     "fastify-autoload": "^3.9.0",
