--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "bellshade-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Repositori untuk server dari web organisasi bellshade",
   "main": "server.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon --ignore discord/tmp server.js"
+    "dev": "nodemon --ignore misc/discord/tmp server.js",
+    "test": "jest",
+    "lint": "eslint {common,config,misc,plugin,router,test}/**/*.js *.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "bellshade",
   "license": "ISC",
   "dependencies": {
     "@octokit/rest": "^18.10.0",
@@ -30,6 +31,11 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
-    "nodemon": "^2.0.12"
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.2.4",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.4.1"
   }
 }
