--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.2.4",
+    "istextorbinary": "^6.0.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.4.1"
