--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "start": "node server.js",
     "dev": "nodemon --ignore misc/discord/tmp server.js",
     "test": "jest",
-    "lint": "eslint {common,config,misc,plugin,router,test}/**/*.js *.js"
+    "lint": "eslint ."
   },
   "author": "bellshade",
-  "license": "ISC",
   "dependencies": {
-    "@fontsource/poppins": "^4.5.0",
     "@octokit/rest": "^18.10.0",
     "canvas": "^2.8.0",
     "discord-webhook-node": "^1.1.8",
