chore: menghapus css dari list lint staged

--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+    "*.{js,md}": "prettier --write"
   }
 }
