--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 node_modules/
-.env
-misc/discord/tmp/
 
 package-lock.json
 yarn.lock
+
+packages/**/.env
+packages/**/node_modules/
+packages/**/package-lock.json
+packages/**/yarn.lock
+
+packages/server/misc/discord/tmp/
 
 .eslintcache
