--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,6 +11,7 @@
     "url": "git+https://github.com/bellshade/bellshade-server.git"
   },
   "dependencies": {
+    "@bellshade/shared": "^1.0.0",
     "@octokit/rest": "^18.10.0",
     "canvas": "^2.8.0",
     "discord-webhook-node": "^1.1.8",
