--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bellshade/server",
-  "version": "1.0.0",
+  "version": "1.0.1-beta.0",
   "private": true,
   "description": "Kode untuk server dari web organisasi bellshade",
   "author": "bellshade",
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/bellshade/bellshade-monorepo.git"
   },
   "dependencies": {
-    "@bellshade/shared": "^1.0.0",
+    "@bellshade/shared": "^1.1.0-beta.0",
     "@octokit/rest": "^18.10.0",
     "canvas": "^2.8.0",
     "discord-webhook-node": "^1.1.8",
@@ -28,10 +28,10 @@
     "toad-scheduler": "^1.5.0"
   },
   "devDependencies": {
-    "istextorbinary": "^6.0.0",
-    "nodemon": "^2.0.12",
     "dotenv": "^10.0.0",
-    "jest": "^27.3.1"
+    "istextorbinary": "^6.0.0",
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.12"
   },
   "scripts": {
     "start": "node server.js",
