--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,12 +3,17 @@ name: Build and deploy to production
 on:
   push:
     branches: [main]
+  pull_request:
+    types: [closed]
+    branches: [main]
 
 jobs:
   deployment:
+    if: github.repository == 'bellshade/bellshade-monorepo'
+    name: Deploy to production
     runs-on: ubuntu-latest
     steps:
-      - name: executing remote ssh commands using password
+      - name: Executing remote ssh commands
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
@@ -16,7 +21,7 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd ~/bellshade/bellshade-server
+            cd ~/bellshade/bellshade-monorepo
             git pull origin main
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
