chore: define paths for cd
Co-authored-by: Ezra Khairan Permana <48118327+reacto11mecha@users.noreply.github.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,9 +3,15 @@ name: Build and deploy to production
 on:
   push:
     branches: [main]
+    paths:
+    - 'packages/server/**'
+    - 'packages/shared/**'
   pull_request:
     types: [closed]
     branches: [main]
+    paths:
+    - 'packages/server/**'
+    - 'packages/shared/**'
 
 jobs:
   deployment:
