chore: menambahkan ignore path untuk readme server dan shared

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,14 +4,18 @@ on:
   push:
     branches: [main]
     paths:
-    - 'packages/server/**'
-    - 'packages/shared/**'
+      - "packages/server/**"
+      - "packages/shared/**"
+      - "!packages/server/README.md"
+      - "!packages/shared/README.md"
   pull_request:
     types: [closed]
     branches: [main]
     paths:
-    - 'packages/server/**'
-    - 'packages/shared/**'
+      - "packages/server/**"
+      - "packages/shared/**"
+      - "!packages/server/README.md"
+      - "!packages/shared/README.md"
 
 jobs:
   deployment:
