--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,7 +7,9 @@ on:
       - "packages/server/**"
       - "packages/shared/**"
       - "!packages/server/README.md"
+      - "!packages/server/CHANGELOG.md"
       - "!packages/shared/README.md"
+      - "!packages/server/CHANGELOG.md"
   pull_request:
     types: [closed]
     branches: [main]
@@ -15,7 +17,9 @@ on:
       - "packages/server/**"
       - "packages/shared/**"
       - "!packages/server/README.md"
+      - "!packages/server/CHANGELOG.md"
       - "!packages/shared/README.md"
+      - "!packages/shared/CHANGELOG.md"
 
 jobs:
   deployment:
