--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,25 +12,25 @@
   },
   "dependencies": {
     "@bellshade/shared": "^1.1.1",
+    "@fastify/autoload": "^4.0.1",
+    "@fastify/compress": "^5.0.0",
+    "@fastify/cors": "^7.0.0",
+    "@fastify/schedule": "^2.0.0",
+    "@fastify/swagger": "^6.0.1",
     "@octokit/rest": "^18.10.0",
     "canvas": "^2.8.0",
     "discord-webhook-node": "^1.1.8",
     "fastify": "^3.22.0",
-    "fastify-autoload": "^3.9.0",
-    "fastify-compress": "^3.6.1",
-    "fastify-cors": "^6.0.2",
     "fastify-plugin": "^3.0.0",
-    "fastify-schedule": "^1.0.0",
-    "fastify-swagger": "^4.12.4",
     "github-username-regex": "^1.0.0",
     "moment": "^2.29.2",
     "node-cache": "^5.1.2",
-    "toad-scheduler": "^1.5.0"
+    "toad-scheduler": "^1.6.1"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.1",
     "istextorbinary": "^6.0.0",
-    "jest": "^27.3.1",
+    "jest": "^28.1.0",
     "nodemon": "^2.0.12"
   },
   "scripts": {
