--- a/packages/ningali/package.json
+++ b/packages/ningali/package.json
@@ -22,21 +22,21 @@
     "url": "https://github.com/bellshade/bellshade-monorepo/issues"
   },
   "dependencies": {
+    "@fastify/autoload": "^4.0.1",
+    "@fastify/static": "^5.0.2",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "bootstrap": "^5.1.3",
-    "directory-tree": "^3.2.2",
-    "ejs": "^3.1.6",
+    "directory-tree": "^3.3.0",
+    "ejs": "^3.1.8",
     "fastify": "^3.27.4",
-    "fastify-autoload": "^3.11.0",
     "fastify-plugin": "^3.0.1",
     "fastify-socket.io": "^3.0.0",
-    "fastify-static": "^4.5.0",
     "github-markdown-css": "^5.1.0",
-    "marked": "^4.0.12",
+    "marked": "^4.0.16",
     "node-emoji": "^1.11.0",
     "point-of-view": "^5.1.0",
     "prismjs": "^1.27.0",
-    "socket.io": "^4.4.1",
+    "socket.io": "^4.5.1",
     "tree-to-list": "^3.0.2"
   }
 }
